...
            android:id="@+id/layout_app_menubar"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:animateLayoutChanges="true" android:elevation="50dp">

            <com.forrestguice.support.widget.Toolbar
            android:id="@+id/app_menubar" style="?attr/toolbarTheme"
            app:title="@string/places_label" />

            <ProgressBar android:id="@+id/app_progress" android:visibility="visible"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal" android:indeterminate="true"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="-12dp" android:layout_marginBottom="0dp" />
...
