...
            android:animateLayoutChanges="true">

            <Button android:id="@+id/button_build_places" android:visibility="visible"
                android:layout_height="wrap_content" android:layout_width="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_gravity="end"
                android:text="@string/places_label_build" />

            <ProgressBar android:id="@+id/progress_build_places" android:visibility="invisible"
                android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_gravity="center" />

        </FrameLayout>

...
